...
                    .alert(isPresented: $presentAlert) {
                        return Alert(
                            title: Text(alertModel.title),
                            message: Text(alertModel.message),
                            dismissButton: .destructive(Text(alertModel.buttonNaming))
                        )
                    }.accessibilityIdentifier("loginButton")
                }
                NavigationLink(destination: SignUpView()) {
                    Text("Don't have an account? Create a one")
                        .font(.system(size: 12))
                        .foregroundColor(.green)
                        .padding()
...
